--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>stream-goodies</name>
+	<name>boilerplate</name>
 	<comment>Project stream-extensions created by Buildship.</comment>
 	<projects>
 	</projects>
