--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,8 @@ repositories {
 apply plugin: 'org.danilopianini.build-commons'
 
 dependencies {
+    compile "com.github.ben-manes.caffeine:caffeine:${caffeineVersion}"
+    compile "com.google.code.findbugs:findbugs:${findBugsVersion}"
     compile "com.google.guava:guava:${guavaVersion}"
 }
 
