--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,8 @@ gradleWrapperVersion = 3.3
 buildCommonsVersion = 0.1.10
 javadocIOLinkerVersion = 0.1.1
 
+caffeineVersion = 2.5.2
+findBugsVersion = [3.0.0, 3.0.1]
 guavaVersion = [r08, 22.0]
 
 pmdTargetJdk = 1.7
