--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,9 @@ repositories {
 apply plugin: 'org.danilopianini.build-commons'
 
 dependencies {
-    compile "com.github.ben-manes.caffeine:caffeine:${caffeineVersion}"
     compile "com.google.code.findbugs:findbugs:${findBugsVersion}"
     compile "com.google.guava:guava:${guavaVersion}"
+    testCompile "junit:junit:${junitVersion}"
 }
 
 apply plugin: 'org.danilopianini.javadoc.io-linker'
