Update build system, switch to kts

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@ jdkVersion = 1.8
 
 group = org.danilopianini
 artifactId = boilerplate
-version = 0.1.8
+version = 0.2.0
 longName = Java boilerplate code
 projectDescription = Java boilerplate code that should help writing more compact programs
 
@@ -16,11 +16,11 @@ scmRepoName = boilerplate.git
 
 gradleWrapperVersion = 3.3
 buildCommonsVersion = 0.1.10
-javadocIOLinkerVersion = 0.1.1
+javadocIOLinkerVersion = 0.1.4
 
 junitVersion = 4.12
 
-findBugsVersion = [3.0.0, 3.0.1]
+spotbugsVersion = 4.0.0-beta1
 guavaVersion = [r08, 22.0]
 
 pmdTargetJdk = 1.7
