--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ matrix:
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y graphviz
-  - export SHOULD_CONFIGURE="$(if ! $TRAVIS_PULL_REQUEST && [ $TRAVIS_REPO_SLUG="DanySK/git-sensitive-semantic-versioning-gradle-plugin" ]; then echo "true"; else echo "false"; fi)"
+  - export SHOULD_CONFIGURE="$(if ! $TRAVIS_PULL_REQUEST && [ $TRAVIS_REPO_SLUG = "DanySK/boilerplate" ]; then echo "true"; else echo "false"; fi)"
 
 install: >-
     if $SHOULD_CONFIGURE; then
