--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ matrix:
       os: linux
 
 before_install:
-  - export SHOULD_CONFIGURE="$(if ! $TRAVIS_PULL_REQUEST && [ $TRAVIS_REPO_SLUG = "DanySK/boilerplate" ]; then echo "true"; else echo "false"; fi)"
+  - export SHOULD_CONFIGURE="$(if ! $TRAVIS_PULL_REQUEST && [ $TRAVIS_REPO_SLUG = 'DanySK/boilerplate' ]; then echo 'true'; else echo 'false'; fi)"
 
 install: >-
     if $SHOULD_CONFIGURE; then
