Configure only on linux

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ matrix:
       os: osx
 
 before_install:
-  - export SHOULD_CONFIGURE="$(if ! $TRAVIS_PULL_REQUEST && [ $TRAVIS_REPO_SLUG = 'DanySK/boilerplate' ]; then echo 'true'; else echo 'false'; fi)"
+  - export SHOULD_CONFIGURE="$(if ! $TRAVIS_PULL_REQUEST && [ $TRAVIS_REPO_SLUG = 'DanySK/boilerplate' ] && [ $TRAVIS_OS_NAME = 'linux' ]; then echo 'true'; else echo 'false'; fi)"
 
 install: >-
     if $SHOULD_CONFIGURE; then
