--- a/.settings/edu.umd.cs.findbugs.core.prefs
+++ b/.settings/edu.umd.cs.findbugs.core.prefs
@@ -1,6 +1,5 @@
-#FindBugs User Preferences
-#Thu Jan 05 12:46:36 CET 2017
-cloud_id=edu.umd.cs.findbugs.cloud.doNothingCloud
+#SpotBugs User Preferences
+#Thu May 16 15:16:29 CEST 2019
 detectorAppendingToAnObjectOutputStream=AppendingToAnObjectOutputStream|true
 detectorAtomicityProblem=AtomicityProblem|true
 detectorBadAppletConstructor=BadAppletConstructor|false
@@ -140,4 +139,4 @@ detector_threshold=3
 effort=max
 filter_settings=Low|BAD_PRACTICE,CORRECTNESS,EXPERIMENTAL,I18N,MALICIOUS_CODE,MT_CORRECTNESS,PERFORMANCE,SECURITY,STYLE|false|16
 filter_settings_neg=NOISE|
-run_at_full_build=false
+run_at_full_build=true
