--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ stages:
   - base
   - test
   - name: deploy
-    if: type != pull_request AND repo = DanySK/upgradle
+    if: type != pull_request AND repo = DanySK/boilerplate
 
 jobs:
   exclude:
