Work around https://issues.sonatype.org/browse/OSSRH-56462 via gradle/gradle#11308

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 group = org.danilopianini
 artifactId = boilerplate
 projectDescription = Java boilerplate code that should help writing more compact programs
+systemProp.org.gradle.internal.publish.checksums.insecure=true
