--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,5 @@ group = org.danilopianini
 artifactId = boilerplate
 projectDescription = Java boilerplate code that should help writing more compact programs
 systemProp.org.gradle.internal.publish.checksums.insecure=true
+systemProp.org.gradle.internal.http.connectionTimeout=500000
+systemProp.org.gradle.internal.http.socketTimeout=500000
