--- a/.travis.yml
+++ b/.travis.yml
@@ -65,3 +65,8 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+
+notifications:
+  email:
+    on_success: never
+  
